# eu4-stats

./: README.md
.github/workflows/: process-save.yml
docs/: 3rdpartylicenses.txt  404.html  index.html  main-6JSDDUKN.js  main-C5HXFXPA.js  main-DESXZWCU.js  main-FTCZLKRQ.js  main-IBZYQLJC.js  main-JW4KOJP3.js  main-LK2WWZRF.js  main-MNZOSO32.js  main-PPWQR4HQ.js  main-UN2HC4KR.js  main-V25HFXMQ.js  main-XIAOKIFD.js  main-YJIEI7QR.js  main-ZIDDPQZW.js  styles-4VFDTH4N.css  styles-W7UAGOSL.css
docs/assets/: old_parsed_country.json  parsed_country.json  parsed_data.json
docs/browser/: index.html  styles-Q4A2XPT3.css
python/: .gitignore  parseEU4.py  requirements.txt
rust/: .gitignore  Cargo.toml  mp_Silverforge1663_02_06.json  mp_Silverforge1694_02_03.json
rust/src/: main.rs  models.rs
webserver/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
webserver/docs/: main-H6VLKCHA.js
webserver/src/: index.html  styles.css
webserver/src/app/: app.component.css  app.component.html  app.component.ts
webserver/src/assets/: parsed_country.json
