[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eu4save = { git = "https://github.com/rakaly/eu4save.git", branch = "master" }
regex = "1.10.2"
jomini =  { version = "0.25.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_warn"] }
serde_json = "1.0.111"
env_logger = "0.10.1"
